recursion.logo.tree.Tree.scala.error
Erreur de compilation :
Tree:15: error: value - is not a member of Unit
    tree(current(steps)-1.0, length*shrink, angle, shrink); //faire le sous arbre
                       ^Tree:20: error: value - is not a member of Unit
    tree(current(steps)-1.0, length*shrink, angle, shrink);
                       ^